--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
 html {
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
+}
+
+header {
+    display: flex;
+    height: 50px;
+    background-color: #DADADA;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.button-primary {
+    color: #E6E6E6;
+    background-color: #A6A6A6;
+    font-weight: bold;
+    border-radius: 0.33rem;
+    height: 2rem;
+    padding: 0.25rem 1rem;
+    margin-right: 2rem;
+}
+
+.button-primary:active {
+    color: #A6A6A6;
+    background-color: #E6E6E6;
 }
