--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,98 @@
 
 html {
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 24px;
 }
 
 header {
     display: flex;
-    height: 50px;
+    height: 60px;
     background-color: #DADADA;
     justify-content: flex-end;
     align-items: center;
 }
 
+h1 {
+    font-size: 60px;
+    margin: 0;
+}
+
+h2 {
+    font-size: 32px;
+    color: #999999;
+    margin-top: 0em;
+}
+
+nav ul {
+    list-style-type: none;
+}
+
+nav li {
+    margin-bottom: 0.25rem;
+}
+
+nav a {
+    color: #999999;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+footer {
+    width: 100%;
+    text-align: center;
+    margin: 3rem auto;
+}
+
 /* Structure Styles */
 
 #frontpage-main {
-    
+    /*background-color: yellow;*/
+    width: 1200px;
+    height: 350px;
+    margin: 2rem auto;
+    display: flex; 
+    justify-content: center;
+}
+
+#frontpage-left {
+    /*background-color: cyan;*/
+    width: 33%;
+}
+
+#frontpage-right {
+    text-align: right;
+    /*background-color: magenta;*/
+    margin-left: 3rem;
+}
+
+#headshot {
+    position: relative;
+    width: 100%;
+    /* Place border inside div */
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 4px solid #CCCCCC;
+    border-radius: 50%;
+    background-image: url(images/headshot.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+#headshot:before {
+    /* Keep 1:1 ratio with width */
+    content: "";
+    display: block;
+    padding-top: 100%;
 }
 
 /* Component Styles */
+
+.icon {
+    width: 32px;
+    height: 32px;
+}
 
 .button-primary {
     color: #E6E6E6;
@@ -27,7 +101,7 @@ header {
     font-weight: bold;
     border-radius: 0.33rem;
     height: 2rem;
-    padding: 0.25rem 1rem;
+    padding: 0 0.75rem;
     margin-right: 2rem;
 }
 
