--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,19 @@ header {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 2.5rem;
     margin: 0;
 }
 
 h2 {
-    font-size: 32px;
+    font-size: 1.33rem;
     color: #999999;
     margin-top: 0em;
 }
 
 nav ul {
     list-style-type: none;
+    padding: 0;
 }
 
 nav li {
@@ -47,22 +48,21 @@ footer {
 /* Structure Styles */
 
 #frontpage-main {
-    /*background-color: yellow;*/
+    /* background-color: yellow; */
     width: 1200px;
-    height: 350px;
     margin: 2rem auto;
-    display: flex; 
+    display: flex;
     justify-content: center;
 }
 
 #frontpage-left {
-    /*background-color: cyan;*/
+    /* background-color: cyan; */
     width: 33%;
 }
 
 #frontpage-right {
     text-align: right;
-    /*background-color: magenta;*/
+    /* background-color: magenta; */
     margin-left: 3rem;
 }
 
@@ -108,4 +108,36 @@ footer {
 .button-primary:active {
     color: #A6A6A6;
     background-color: #E6E6E6;
+}
+
+/* Reactive Design */
+
+@media only screen and (max-width: 1200px) {
+
+    #frontpage-main {
+        width: 450px;
+        flex-direction: column;
+    }
+
+    #frontpage-left {
+        margin: 0 auto 1rem auto;
+    }
+
+    #frontpage-right {
+        text-align: center;
+        margin: 0;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+    #frontpage-main {
+        width: 350px;
+    }
+
+    html {
+        font-size: 16px;
+    }
+
 }
