--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
+/* Animations */
+
+@keyframes slideInFromLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-50%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(50%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 /* Global Styles */
 
 html {
@@ -30,7 +54,20 @@ nav ul {
 }
 
 nav li {
+    opacity: 0; /* hide before animation */
     margin-bottom: 0.25rem;
+}
+
+nav li:nth-child(1) {
+    animation: slideInFromBottom 1s 0s forwards;
+}
+
+nav li:nth-child(2) {
+    animation: slideInFromBottom 1s 0.1s forwards;
+}
+
+nav li:nth-child(3) {
+    animation: slideInFromBottom 1s 0.2s forwards;
 }
 
 nav a {
@@ -79,6 +116,8 @@ footer {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    opacity: 0; /* hide before animation */
+    animation: slideInFromLeft 1s 0s forwards;
 }
 
 #headshot:before {
