Add footer and other small tweaks

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,8 @@
 footer {
-    width: 100%;
+    display: fixed;
+    left: 0;
+    bottom: 0;
+    width: 38%;
     text-align: center;
     margin: 3rem auto;
 }
