--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -43,6 +43,8 @@
 
 html {
     font-family: 'Roboto', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
+    /* font-family: 'Source Sans Pro', sans-serif; */
     font-size: 24px;
     height: 100%;
 }
@@ -72,6 +74,11 @@ h2 {
     font-size: 1.33rem;
     color: #999999;
     margin-top: 0em;
+    font-style: italic;
+}
+
+p {
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 nav ul {
@@ -105,23 +112,6 @@ nav a {
     color: #999999;
     font-weight: bold;
     text-decoration: none;
-}
-
-/* Component Styles */
-
-.button-primary {
-    color: #E6E6E6;
-    background-color: #A6A6A6;
-    font-weight: bold;
-    border-radius: 0.33rem;
-    height: 2rem;
-    padding: 0 0.75rem;
-    margin-right: 2rem;
-}
-
-.button-primary:active {
-    color: #A6A6A6;
-    background-color: #E6E6E6;
 }
 
 /* Reactive Design */
