--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -77,6 +77,11 @@ h2 {
     font-style: italic;
 }
 
+h3 {
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
 p {
     font-family: 'Source Sans Pro', sans-serif;
 }
