--- a/src/Components/Right/Right.css
+++ b/src/Components/Right/Right.css
@@ -2,10 +2,24 @@
     width: 62%;
     margin-left: 38%;
     overflow: scroll;
-    background-color: var(--color-a);
 }
 
 .right-content-wrapper {
     min-height: 500px;
-    padding: 2rem;
+    padding: 2.5rem;
+}
+
+footer {
+    height: 70px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(49, 49, 49);
+    color: #dadada;
+    font-size: 0.75rem;
+}
+
+footer p {
+    margin: 0;
 }
