--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,5 +1,12 @@
 .main-container {
     display: flex;
     height: 100%;
-    background-color: yellow;
+}
+
+/* Reactive Design */
+
+@media only screen and (max-width: 1250px) {
+    .main-container {
+        flex-direction: column;
+    }
 }
