--- a/src/Components/Right/Right.css
+++ b/src/Components/Right/Right.css
@@ -23,3 +23,13 @@ footer {
 footer p {
     margin: 0;
 }
+
+/* Reactive Design */
+
+@media only screen and (max-width: 1250px) {
+    .right-container {
+        width: 100%;
+        margin-left: 0;
+        overflow: visible; /* default */
+    }
+}
