Better rules for mobile compatibility

--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -1,6 +1,10 @@
 /* Component Styles */
 
 .left-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     width: 38%;
     height: 100%;
@@ -8,8 +12,17 @@
 }
 
 .about-container {
-    width: 300px;
+    width: 400px;
     padding: 3rem 2.5rem;
+    margin-top: 70px;
+}
+
+.about-container p {
+    margin: 1rem 0 0 0;
+}
+
+.social-container {
+    margin: 1rem 0 0 0;
 }
 
 .social-icon {
@@ -46,13 +59,19 @@
 
 /* Reactive Design */
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1300px) {
     .left-container {
-        position: static; /* default */
+        position: static;
         width: 100%;
     }
 
     .about-container {
         padding: 3rem 30px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .about-container {
+        width: 300px;
     }
 }
