--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,14 @@
 
 /* Reactive Design */
 
-@media only screen and (max-width: 1350px) {
+@media only screen and (max-width: 1500px) {
     html {
-        font-size: 22px;
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    html {
+        font-size: 18px;
     }
 }
