--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -78,10 +78,13 @@ h2 {
 }
 
 h3 {
+    font-size: 1.33rem;
     color: white;
     margin: 0;
     margin-bottom: 1rem;
     text-transform: uppercase;
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 h4 {
