--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .portfolio-item-container {
@@ -15,7 +15,17 @@
     background-color: var(--color-a);
     color: white;
     padding: 0.75rem;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
+    -webkit-border-radius: 0.25rem;
+    -moz-border-radius: 0.25rem;
+    border-radius: 0.25rem;
+    -webkit-box-shadow: rgba(0,0,0,0.3) 0px 0 10px;
+    -moz-box-shadow: rgba(0,0,0,0.3) 0 0 10px;
+    box-shadow: rgba(255,255,255,0.3) 0 0 10px;
+}
+
+.portfolio-item-container.empty {
+    opacity: 0;
 }
 
 .technologies-container {
@@ -31,12 +41,12 @@
 
 /* Reactive Design */
 
-@media only screen and (max-width: 1500px) {
+/* @media only screen and (max-width: 1500px) {
     .portfolio-content-container {
         flex-direction: column;
         align-content: space-around;
     }
-}
+} */
 
 @media only screen and (max-width: 1300px) {
     .portfolio-content-container {
