--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -78,16 +78,18 @@ h2 {
 }
 
 h3 {
-    font-size: 1.33rem;
+    font-size: 1.5rem;
     color: white;
+    text-align: center;
     margin: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     text-transform: uppercase;
     /* font-family: 'Montserrat', sans-serif; */
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 h4 {
+    font-size: 1.2rem;
     margin: 0;
     color: white;
 }
