--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -9,6 +9,7 @@
     width: 38%;
     height: 100%;
     background-color: var(--color-0);
+    box-shadow: 15px 0px 12px -6px rgba(0, 0, 0, 0.15);
 }
 
 .about-container {
