--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .portfolio-item-link {
@@ -11,8 +11,8 @@
 }
 
 .portfolio-item-container {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -25,7 +25,7 @@
     border-radius: 0.25rem;
     -webkit-box-shadow: rgba(0,0,0,0.3) 0px 0 10px;
     -moz-box-shadow: rgba(0,0,0,0.3) 0 0 10px;
-    box-shadow: rgba(0,0,0,1) 0 0 5px;
+    box-shadow: rgba(0,0,0,0.4) 0 0 5px;
 }
 
 .portfolio-item-container.empty {
