--- a/src/Components/CertificationItem/CertificationItem.css
+++ b/src/Components/CertificationItem/CertificationItem.css
@@ -2,21 +2,39 @@
     text-decoration: none;
 }
 
-.certification-wrapper {
+.certification-container {
     color: white;
     background-color: var(--color-b);
-    margin-bottom: 1rem;
-    padding: 1rem;
-    -webkit-border-radius: 0.25rem;
-    -moz-border-radius: 0.25rem;
-    border-radius: 0.25rem;
+    padding: 0.75rem 1rem;
+    /* border: 1px solid var(--color-b); */
     -webkit-box-shadow: rgba(0,0,0,0.3) 0px 0 10px;
     -moz-box-shadow: rgba(0,0,0,0.3) 0 0 10px;
     box-shadow: rgba(0,0,0,0.3) 0 0 10px;
+    border-left: 5px solid transparent;
+    border-top: 0px;
+    border-bottom: 0px;
+    margin: 4px 0 0 4px;
 }
 
-.certification-wrapper:hover {
-    color: var(--color-b);
+.certification-container:hover {
+    color: var(--color-a);
     background-color: var(--color-0);
-    transition: background-color 0.08s linear;
+    transition: background-color 0.1s ease-in-out;
+    border-left: 5px solid var(--color-c);
+}
+
+.certification-icon {
+    height: 50px;
+    width: 50px;
+}
+
+.certification-name {
+    font-family: ClearSans-Regular;
+    margin: 0;
+}
+
+.certification-hours {
+    font-family: ClearSans-Regular;
+    margin: 0.33rem 0 0 0;
+    font-size: 0.75rem;
 }
