--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -17,15 +17,19 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: var(--color-a);
-    color: white;
+    color: var(--color-0);
     padding: 0.75rem;
     margin-bottom: 1rem;
-    -webkit-border-radius: 0.25rem;
-    -moz-border-radius: 0.25rem;
-    border-radius: 0.25rem;
     -webkit-box-shadow: rgba(0,0,0,0.3) 0px 0 10px;
     -moz-box-shadow: rgba(0,0,0,0.3) 0 0 10px;
     box-shadow: rgba(0,0,0,0.4) 0 0 5px;
+    border-top: 5px solid transparent;
+}
+
+.portfolio-item-container:hover {
+    background-color: var(--color-0);
+    color: var(--color-a);
+    border-top: 5px solid var(--color-c);
 }
 
 .portfolio-item-container.empty {
