--- a/src/Components/CertificationItem/CertificationItem.css
+++ b/src/Components/CertificationItem/CertificationItem.css
@@ -3,29 +3,22 @@
 }
 
 .certification-container {
-    color: white;
-    background-color: var(--color-b);
-    padding: 0.75rem 1rem;
-    /* border: 1px solid var(--color-b); */
-    -webkit-box-shadow: rgba(0,0,0,0.3) 0px 0 10px;
-    -moz-box-shadow: rgba(0,0,0,0.3) 0 0 10px;
-    box-shadow: rgba(0,0,0,0.3) 0 0 10px;
-    border-left: 5px solid transparent;
-    border-top: 0px;
-    border-bottom: 0px;
-    margin: 4px 0 0 4px;
+    color: var(--color-0);
+    background-color: var(--color-a);
+    box-shadow: rgba(0,0,0,0.5) 0 0 5px;
+    margin: 12px 12px 0 0;
 }
 
-.certification-container:hover {
-    color: var(--color-a);
-    background-color: var(--color-0);
-    transition: background-color 0.1s ease-in-out;
+.certification-inner-container {
+    padding: 0.75rem 1rem;
     border-left: 5px solid var(--color-c);
 }
 
-.certification-icon {
-    height: 50px;
-    width: 50px;
+.certification-inner-container:hover {
+    color: var(--color-a);
+    background-color: var(--color-c);
+    transition: color 0.1s ease-in-out;
+    transition: background-color 0.1s ease-in-out;
 }
 
 .certification-name {
