--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -16,20 +16,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: var(--color-a);
     color: var(--color-0);
+    background-color: var(--color-a);
     padding: 0.75rem;
     margin-bottom: 1rem;
-    -webkit-box-shadow: rgba(0,0,0,0.3) 0px 0 10px;
-    -moz-box-shadow: rgba(0,0,0,0.3) 0 0 10px;
-    box-shadow: rgba(0,0,0,0.4) 0 0 5px;
-    border-top: 5px solid transparent;
+    box-shadow: rgba(0,0,0,0.5) 0 0 5px;
+    border-top: 5px solid var(--color-c);
 }
 
 .portfolio-item-container:hover {
-    background-color: var(--color-0);
     color: var(--color-a);
-    border-top: 5px solid var(--color-c);
+    background-color: var(--color-c);
+    transition: background-color 0.1s ease-in-out;
 }
 
 .portfolio-item-container.empty {
