Reorganize use of right hand color and add About section

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ html {
     /* font-family: 'Source Sans Pro', sans-serif; */
     font-size: 24px;
     color: white;
+    background-color: var(--color-a);
     height: 100%;
 }
 
