--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,9 @@ h1 {
 
 h2 {
     font-size: 1.33rem;
-    color: #999999;
-    margin-top: 0em;
     font-style: italic;
+    color: var(--color-0);
+    margin-top: 0em;
 }
 
 h3 {
@@ -93,8 +93,6 @@ h3 {
     color: white;
     margin: 0;
     margin-bottom: 2rem;
-    /* font-family: 'Montserrat', sans-serif; */
-    /* font-family: 'Source Sans Pro', sans-serif; */
 }
 
 h4 {
