--- a/src/Components/Right/Right.css
+++ b/src/Components/Right/Right.css
@@ -7,7 +7,7 @@
 .right-content-wrapper {
     min-height: 300px;
     padding: 2.5rem;
-    border-bottom: 1px solid var(--color-0);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 footer {
