--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ header {
 h1 {
     font-family: ClearSans-Regular, serif;
     font-size: 2.5rem;
-    color: var(--color-0);
+    color: var(--color-d);
     margin: 0;
 }
 
