--- a/src/App.css
+++ b/src/App.css
@@ -73,14 +73,14 @@ header {
 h1 {
     font-family: ClearSans-Regular, serif;
     font-size: 2.5rem;
-    color: var(--color-d);
+    color: white;
     margin: 0;
 }
 
 h2 {
     font-size: 1.33rem;
     font-style: italic;
-    color: var(--color-0);
+    color: var(--color-d);
     margin-top: 0em;
 }
 
