--- a/src/Components/CertificationItem/CertificationItem.css
+++ b/src/Components/CertificationItem/CertificationItem.css
@@ -18,11 +18,11 @@
     color: var(--color-a);
     background-color: var(--color-c);
     transition: color 0.1s ease-in-out;
-    transition: background-color 0.1s ease-in-out;
-    -webkit-transition: color 0.1s ease-in-out;
-    -moz-transition: color 0.1s ease-in-out;
-    -ms-transition: color 0.1s ease-in-out;
-    -o-transition: color 0.1s ease-in-out;
+    transition: background-color 0.2s ease-in-out;
+    -webkit-transition: background-color 0.2s ease-in-out;
+    -moz-transition: background-color 0.2s ease-in-out;
+    -ms-transition: background-color 0.2s ease-in-out;
+    -o-transition: background-color 0.2s ease-in-out;
 }
 
 .certification-name {
