--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -9,7 +9,7 @@
     width: 33%;
     height: 100%;
     background-color: var(--color-a);
-    box-shadow: 15px 0px 12px -6px rgba(0, 0, 0, 0.15);
+    box-shadow: 10px 0px 20px 0px rgba(0, 0, 0, 0.15);
     /*Free Diagonal Lines SVG provided by SVGeez.com - CC 4.0 License - © 2019 Megan Young */
     background-size:92px 92px;
     background-repeat:repeat;
@@ -45,6 +45,7 @@
 
 .contact-button {
     width: 200px;
+    height: 2rem;
     margin-bottom: 100px;
     color: var(--color-a);
     background-color: var(--color-d);
@@ -52,7 +53,10 @@
     font-weight: bold;
     outline: inherit;
     border-radius: 5px;
-    height: 2rem;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
     padding: 0 0.75rem;
 }
 
@@ -68,6 +72,7 @@
     .left-container {
         position: static;
         width: 100%;
+        /* box-shadow: 0px 10px 2px -2px rgba(0, 0, 0, 0.15); */
     }
 
     .about-container {
