--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -6,10 +6,14 @@
     align-items: center;
     justify-content: center;
     position: fixed;
-    width: 38%;
+    width: 33%;
     height: 100%;
-    background-color: var(--color-0);
-    box-shadow: 15px 0px 12px -6px rgba(0, 0, 0, 0.15);
+    background-color: var(--color-a);
+    box-shadow: 10px 0px 20px 0px rgba(0, 0, 0, 0.15);
+    /*Free Diagonal Lines SVG provided by SVGeez.com - CC 4.0 License - © 2019 Megan Young */
+    background-size:92px 92px;
+    background-repeat:repeat;
+    background-image:url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500' fill-opacity='0.13' style='enable-background:new 0 0 500 500'%3E%3Cstyle%3E .st2{fill:rgba(255,255,255,1)} %3C/style%3E%3Cg style='display:none'%3E%3Cpath style='display:inline;fill:%23414042' d='M-8.3-5.7h520.7V511H-8.3z' id='Layer_2'/%3E%3C/g%3E%3Cg id='Layer_1'%3E%3Cpath transform='rotate(-45.001 0 .055)' class='st2' d='M-453.7-3.7h907.5v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 31.25 31.306)' class='st2' d='M-422.5 27.6H485v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 62.5 62.556)' class='st2' d='M-391.2 58.8h907.5v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 93.75 93.807)' class='st2' d='M-360 90.1h907.5v7.5H-360z'/%3E%3Cpath transform='rotate(-45.001 125 125.057)' class='st2' d='M-328.7 121.3h907.5v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 156.249 156.308)' class='st2' d='M-297.5 152.6H610v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 187.499 187.558)' class='st2' d='M-266.2 183.8h907.5v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 218.749 218.809)' class='st2' d='M-235 215.1h907.5v7.5H-235z'/%3E%3Cpath transform='rotate(-45.001 249.998 250.06)' class='st2' d='M-203.7 246.3h907.5v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 281.248 281.31)' class='st2' d='M-172.5 277.6H735v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 312.498 312.56)' class='st2' d='M-141.2 308.8h907.5v7.5h-907.5z'/%3E%3Cpath transform='rotate(-45.001 343.748 343.81)' class='st2' d='M-110 340.1h907.5v7.5H-110z'/%3E%3Cpath transform='rotate(-45.001 374.997 375.061)' class='st2' d='M-78.7 371.3h907.5v7.5H-78.7z'/%3E%3Cpath transform='rotate(-45.001 406.247 406.312)' class='st2' d='M-47.5 402.6H860v7.5H-47.5z'/%3E%3Cpath transform='rotate(-45.001 437.497 437.562)' class='st2' d='M-16.2 433.8h907.5v7.5H-16.2z'/%3E%3Cpath transform='rotate(-45.001 468.747 468.813)' class='st2' d='M15 465.1h907.5v7.5H15z'/%3E%3Cpath transform='rotate(-45.001 499.997 500.064)' class='st2' d='M46.3 496.3h907.5v7.5H46.3z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .about-container {
@@ -41,21 +45,25 @@
 
 .contact-button {
     width: 200px;
+    height: 2rem;
     margin-bottom: 100px;
-    color: white;
-    background-color: var(--color-c);
-    font-weight: bold;
+    color: var(--color-a);
+    background-color: var(--color-d);
     border: none;
+    font-weight: bold;
     outline: inherit;
     border-radius: 5px;
-    height: 2rem;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
     padding: 0 0.75rem;
 }
 
 .contact-button:active {
-    color: var(--color-c);
-    background-color: white;
-    border: 1px var(--color-c) solid;
+    color: var(--color-d);
+    background-color: transparent;
+    border: 1px var(--color-d) solid;
 }
 
 /* Reactive Design */
@@ -64,6 +72,7 @@
     .left-container {
         position: static;
         width: 100%;
+        /* box-shadow: 0px 10px 2px -2px rgba(0, 0, 0, 0.15); */
     }
 
     .about-container {
