--- a/src/Components/Right/Right.css
+++ b/src/Components/Right/Right.css
@@ -1,12 +1,13 @@
 .right-container {
-    width: 62%;
-    margin-left: 38%;
+    width: 67%;
+    margin-left: 33%;
     overflow: scroll;
 }
 
 .right-content-wrapper {
     min-height: 300px;
     padding: 2.5rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 footer {
