--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     --color-c: #00B4CC;
     --color-d: #00DFFC;
     --color-e: #005F68;
-    --color-f: #373b3b;
+    --color-f: #2A2E2E;
 }
 
 /* Fonts */
