--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -8,7 +8,7 @@
     position: fixed;
     width: 33%;
     height: 100%;
-    background-color: var(--color-a);
+    background-color: var(--color-f);
     box-shadow: 10px 0px 20px 0px rgba(0, 0, 0, 0.15);
     /*Free Diagonal Lines SVG provided by SVGeez.com - CC 4.0 License - © 2019 Megan Young */
     background-size:92px 92px;
