--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -47,23 +47,12 @@
     width: 200px;
     height: 2rem;
     margin-bottom: 100px;
-    color: var(--color-a);
-    background-color: var(--color-d);
-    border: none;
+    color: var(--color-d);
+    background-color: var(--color-f);
+    border: 1px solid var(--color-d);
     font-weight: bold;
     outline: inherit;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
     padding: 0 0.75rem;
-}
-
-.contact-button:active {
-    color: var(--color-d);
-    background-color: transparent;
-    border: 1px var(--color-d) solid;
 }
 
 /* Reactive Design */
