--- a/src/Components/Left/Left.css
+++ b/src/Components/Left/Left.css
@@ -44,16 +44,58 @@
 }
 
 .contact-button {
+    position:relative; /* needed for animation */
     width: 200px;
     height: 2rem;
     margin-bottom: 100px;
-    color: var(--color-d);
     background-color: var(--color-f);
     border: 1px solid var(--color-d);
-    font-weight: bold;
     outline: inherit;
     padding: 0 0.75rem;
+    cursor: pointer;
+    overflow: hidden; /* needed for animation */
 }
+
+.contact-button > p {
+    color: var(--color-d);
+    position: relative;
+    margin: 0;
+    z-index: 1;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+}
+
+.contact-button::before {
+    content: "";
+    width: 110%;
+    height: 100%;
+    background-color: var(--color-d);
+    position: absolute;
+    top: 0;
+    left: -224px;
+    transform: skewX(-15deg);
+    -webkit-transform: skewX(-15deg);
+    -moz-transform: skewX(-15deg);
+    -ms-transform: skewX(-15deg);
+    -o-transform: skewX(-15deg);
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+}
+
+.contact-button:hover::before {
+    left: -10px;
+}
+
+.contact-button:hover p {
+    color: var(--color-f);
+}
+
 
 /* Reactive Design */
 
