--- a/src/Components/CertificationsContent/CertificationsContent.css
+++ b/src/Components/CertificationsContent/CertificationsContent.css
@@ -1,4 +1,6 @@
 .certifications-content-container {
+    max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
