--- a/src/Components/CertificationItem/CertificationItem.css
+++ b/src/Components/CertificationItem/CertificationItem.css
@@ -4,14 +4,14 @@
 
 .certification-container {
     color: var(--color-0);
-    background-color: var(--color-a);
+    background-color: var(--color-h);
     box-shadow: rgba(0,0,0,0.5) 0 0 5px;
     margin: 12px 12px 0 0;
 }
 
 .certification-inner-container {
     padding: 0.75rem 1rem;
-    border-left: 5px solid var(--color-c);
+    border-left: 5px solid var(--color-d);
 }
 
 .certification-inner-container:hover {
