--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    justify-content: space-around;
 }
 
 .portfolio-item-container {
@@ -19,7 +20,7 @@
     background-color: var(--color-a);
     padding: 0.75rem;
     box-shadow: rgba(0,0,0,0.5) 0 0 5px;
-    border-top: 5px solid var(--color-c);
+    border-top: 5px solid var(--color-d);
 }
 
 .portfolio-item-container:not(:last-child) {
