--- a/src/Components/Right/Right.css
+++ b/src/Components/Right/Right.css
@@ -1,21 +1,26 @@
 .right-container {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
     width: 100%;
 }
 
 .right-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--color-f);
     min-height: 100px;
-    padding: 2.5rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 5.5rem 2.5rem;
 }
 
 footer {
-    height: 70px;
+    height: 150px;
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(49, 49, 49);
+    background-color: var(--color-a);
     color: #dadada;
     font-size: 0.75rem;
 }
