--- a/src/Components/FadeInSection/FadeInSection.css
+++ b/src/Components/FadeInSection/FadeInSection.css
@@ -1,16 +1,25 @@
 .fade-in-section {
     opacity: 0;
+    transform: translateY(5vh);
+    -webkit-transform: translateY(5vh);
+    -moz-transform: translateY(5vh);
+    -ms-transform: translateY(5vh);
+    -o-transform: translateY(5vh);
     visibility: hidden;
-    transition: opacity 2s ease;
-    -webkit-transition: opacity 2s ease;
-    -moz-transition: opacity 2s ease;
-    -ms-transition: opacity 2s ease;
-    -o-transition: opacity 2s ease;
+    transition: opacity 2s ease, transform 1s ease;
+    -webkit-transition: opacity 2s ease, transform 1s ease;
+    -moz-transition: opacity 2s ease, transform 1s ease;
+    -ms-transition: opacity 2s ease, transform 1s ease;
+    -o-transition: opacity 2s ease, transform 1s ease;
     will-change: opacity, visibility;
 }
 
 .fade-in-section.is-visible {
     opacity: 1;
     transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
     visibility: visible;
 }
