--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -70,5 +70,10 @@
 @media only screen and (max-width: 1100px) {
     .portfolio-content-container {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .portfolio-item-container {
+        margin-bottom: 1.5rem;
     }
 }
