--- a/src/App.css
+++ b/src/App.css
@@ -96,10 +96,12 @@ h3 {
 }
 
 h4 {
-    font-size: 1.2rem;
+    font-size: 1.25rem;
+    text-transform: uppercase;
     letter-spacing: 0.05rem;
     margin: 0;
     color: white;
+    text-align: center;
 }
 
 p {
